# cad

./: .gitignore  .gitmodules  AGENTS.md  pyproject.toml
cadmultiphysics/: __init__.py  __main__.py  builder.py  cli.py  core.py  diagnostics.py  discrete.py  errors.py  io.py  mesh.py  physics.py  run.py  schema.py  solver.py  units.py
docs/: SPEC.md  core.mermaid  linearsteady.mermaid  lineartransient.mermaid  nonlinearsteady.mermaid  nonlineartransient.mermaid  solver.mermaid
examples/: cantilever_elastic.yml  heated_bracket.yml  perforated_plate.yml  transient_heat.yml
reference/design/: lineartransient.mermaid  nonlinearsteady.mermaid
