[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cadmultiphysics"
version = "0.1.0"
description = "Compact CAD and multiphysics orchestration core"
readme = "docs/SPEC.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pint>=0.24,<1",
  "PyYAML>=6.0,<7",
  "gmsh>=4.13,<5",
  "fenics-basix>=0.11",
  "fenics-ffcx>=0.11",
  "fenics-ufl>=2026.1",
  "mpi4py>=4,<5",
  "petsc>=3.23,<4",
  "petsc4py>=3.23,<4",
  "adios2>=2.10,<3",
  "mpich>=4,<5",
]

[project.scripts]
cadmp = "cadmultiphysics.cli:main"

[tool.uv]
package = true
